name:                lambdacoucou
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lambdacoucou#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wincomplete-patterns -Wunused-imports -Werror -O2

  exposed-modules:
      LambdaCoucou.Bot
    , LambdaCoucou.Cancer
    , LambdaCoucou.Channel
    , LambdaCoucou.Cli
    , LambdaCoucou.Command
    , LambdaCoucou.Crypto
    , LambdaCoucou.CryptoMonitor
    , LambdaCoucou.Date
    , LambdaCoucou.HandlerUtils
    , LambdaCoucou.Help
    , LambdaCoucou.Http
    , LambdaCoucou.Joke
    , LambdaCoucou.Parser
    , LambdaCoucou.ParserUtils
    , LambdaCoucou.PR
    , LambdaCoucou.RepublicanCalendar
    , LambdaCoucou.State
    , LambdaCoucou.Url
    , LambdaCoucou.Twitch
    , LambdaCoucou.TwitchTypes
    , LambdaCoucou.TwitchHook

  extensions:
      DataKinds
    , DeriveGeneric
    , DerivingVia
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , NamedFieldPuns
    , NoImplicitPrelude
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications

  build-depends:
      base >= 4.7 && < 5
    , aeson
    , async
    , generic-lens
    , harg
    , higgledy
    , http-client
    , http-types
    , irc-client
    , irc-ctcp
    , lens
    , megaparsec
    , mtl
    , random
    , req
    , rio
    , scientific
    , servant
    , servant-server
    , sqlite-simple
    , stm
    , stm-chans
    , tagsoup
    , text
    , time
    , wai-extra
    , warp
    , ring-buffer

executable lambdacoucou
  hs-source-dirs:      bin
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unused-do-bind -Wno-orphans
  build-depends:       base >= 4.7 && < 5
                     , lambdacoucou

executable lambdacoucou-test
  hs-source-dirs:      bin
  default-language:    Haskell2010
  main-is:             MainTest.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unused-do-bind -Wno-orphans
  build-depends:       base >= 4.7 && < 5
                     , lambdacoucou
                     , rio

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       LambdaCoucou.ParserSpec
                     , LambdaCoucou.UrlSpec

  build-depends:       base
                     , hspec
                     , hspec-megaparsec
                     , hspec-expectations
                     , lambdacoucou
                     , megaparsec
                     , text
                     , rio

  extensions:
      OverloadedStrings
    , NoImplicitPrelude

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unused-do-bind -Wno-orphans
  default-language:    Haskell2010
